<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/gool_grey">

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/logout"
        android:textColor="@color/gool_blue"
        android:textSize="20sp"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivUserPhoto"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/none"
        android:elevation="2dp"
        android:focusable="true"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:srcCompat="@drawable/mathkef_owl_logo" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/merienda_one"
        android:gravity="center_horizontal"
        android:text="@string/none"
        android:textColor="@color/gool_orange"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="normal"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        ads:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/tvUserName">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda_one"
            android:text="@string/last_survivor_record"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLastSvrScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/quicksand_regular"
            android:padding="3dp"
            android:text="@string/never_played_last_survivor"
            android:textColor="@color/gool_blue"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        ads:layout_constraintBottom_toTopOf="@+id/ivUserPhoto"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda_one"
            android:text="@string/journey_record"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvJourneyScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/quicksand_regular"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/never_played_journey"
            android:textColor="@color/gool_blue"
            android:textSize="28sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>