<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDetails"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/merienda_one"
        android:gravity="center"
        android:text="@string/select_operators"
        android:textColor="@color/gool_blue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/you_choose_we_ask"
        android:textColor="@color/gool_orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/ivMultiplySign"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivDivisionSign"
        app:layout_constraintEnd_toStartOf="@+id/ivDivisionSign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivDivisionSign"
        app:srcCompat="@drawable/operator_multiply"
        android:contentDescription="@string/none" />

    <ImageView
        android:id="@+id/ivDivisionSign"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/tvPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivMultiplySign"
        app:srcCompat="@drawable/operator_division"
        android:contentDescription="@string/none" />

    <ImageView
        android:id="@+id/ivMinusSign"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/ivDivisionSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPlusSign"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/operator_minus"
        android:contentDescription="@string/none" />

    <ImageView
        android:id="@+id/ivPlusSign"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivMinusSign"
        app:layout_constraintEnd_toStartOf="@+id/ivMinusSign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivMinusSign"
        app:srcCompat="@drawable/operator_plus"
        android:contentDescription="@string/none" />

    <TextView
        android:id="@+id/tvPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:lines="1"
        android:text="@string/play"
        android:textColor="@color/gool_orange"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_weight="1"
        android:gravity="end"
        android:lines="1"
        android:text="@string/cancel"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvPlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvPlay" />


</androidx.constraintlayout.widget.ConstraintLayout>